--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,8 @@
-body {
-  background-color: pink;
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 /*# sourceMappingURL=main.css.map */
