--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,5 @@
 @import 'core/variables.scss';
-@import 'core/reset.scss';
+@import 'core/base.scss';
 
 @import 'components/buttons.scss';
 @import 'components/hero.scss';
