Fixed html & hero & typo

--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -3,3 +3,10 @@ $color-white: #ffffff;
 $color-light-blue: #8ccbea;
 $color-blue: #0271bc;
 $color-dark-blue: #304268;
+
+$background-section: #eff9ff;
+$background-footer: #0271bc;
+
+$font-family-title: 'Roboto Slab', serif;
+$font-family-content: 'Roboto', sans-serif;
+$font-color-hero: $color-white;
