--- a/styles/main.css
+++ b/styles/main.css
@@ -5,4 +5,26 @@
   padding: 0;
 }
 
+body {
+  width: 100%;
+  height: 100%;
+}
+
+.hero {
+  min-height: 100vh;
+  width: 100%;
+  background: url(../../images/cover.jpg) center no-repeat;
+  background-size: cover;
+}
+
+.title--h1 {
+  font-family: "Roboto Slab", serif;
+  font-size: 42px;
+  font-weight: bold;
+  color: #ffffff;
+  line-height: 55px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
 /*# sourceMappingURL=main.css.map */
