--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -7,3 +7,10 @@
   text-align: center;
   text-transform: uppercase;
 }
+
+.txt--giro {
+  font-family: $font-family-content;
+  font-size: 16px;
+  color: $font-color-hero;
+  text-align: center;
+}
