--- a/styles/main.css
+++ b/styles/main.css
@@ -27,4 +27,11 @@ body {
   text-transform: uppercase;
 }
 
+.txt--giro {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  color: #ffffff;
+  text-align: center;
+}
+
 /*# sourceMappingURL=main.css.map */
