--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,6 +1,26 @@
 .hero {
-min-height: 100vh;
-width: 100%;
-background: url(../../images/cover.jpg) center no-repeat;
-background-size: cover;
+  min-height: 100vh;
+  width: 100%;
+  background: url(../../images/cover.jpg) center no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+.title--h1 {
+  width: 290px;
+  height: 110px;
+  margin: 28.4rem 1.5rem 1rem 1.5rem;
+}
+
+.txt--giro {
+  width: 290px;
+  height: 21px;
+  margin: 0 1.5rem 4.5rem 1.5rem;
+}
+
+.button--down {
+  margin: 0 13.8rem 5.3rem 13.8rem;
 }
