--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  border-style: none;
 }
 
 body {
@@ -10,11 +11,54 @@ body {
   height: 100%;
 }
 
+.button--menu {
+  background-color: #0271bc;
+  padding: 15px 14px;
+  position: absolute;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.button--down {
+  height: 45px;
+  width: 45px;
+  background-color: #ffffff;
+  border-radius: 22.5px;
+}
+
 .hero {
   min-height: 100vh;
   width: 100%;
   background: url(../../images/cover.jpg) center no-repeat;
   background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  position: relative;
+}
+
+.title--h1 {
+  width: 290px;
+  height: 110px;
+  margin: 28.4rem 1.5rem 1rem 1.5rem;
+}
+
+.txt--giro {
+  width: 290px;
+  height: 21px;
+  margin: 0 1.5rem 4.5rem 1.5rem;
+}
+
+.button--down {
+  margin: 0 13.8rem 5.3rem 13.8rem;
 }
 
 .title--h1 {
