--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -3,6 +3,8 @@ $color-white: #ffffff;
 $color-light-blue: #8ccbea;
 $color-blue: #0271bc;
 $color-dark-blue: #304268;
+$color-black: #000;
+$color-grey: #4a4a4a;
 
 $background-section: #eff9ff;
 $background-footer: #0271bc;
@@ -10,3 +12,6 @@ $background-footer: #0271bc;
 $font-family-title: 'Roboto Slab', serif;
 $font-family-content: 'Roboto', sans-serif;
 $font-color-hero: $color-white;
+$font-color-txt-xs: $color-light-blue;
+$font-color-h2: $color-black;
+$font-color-txt-article: $color-grey;
