--- a/styles/main.css
+++ b/styles/main.css
@@ -78,4 +78,25 @@ body {
   text-align: center;
 }
 
+.txt--xs {
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  color: #8ccbea;
+  line-height: 30px;
+}
+
+.title--h2 {
+  font-family: "Roboto Slab", serif;
+  font-size: 24px;
+  color: #000;
+  line-height: 30px;
+}
+
+.txt--article {
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  color: #4a4a4a;
+  line-height: 30px;
+}
+
 /*# sourceMappingURL=main.css.map */
