Add section styles

--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -11,7 +11,10 @@ $background-footer: #0271bc;
 
 $font-family-title: 'Roboto Slab', serif;
 $font-family-content: 'Roboto', sans-serif;
+
 $font-color-hero: $color-white;
 $font-color-txt-xs: $color-light-blue;
 $font-color-h2: $color-black;
 $font-color-txt-article: $color-grey;
+$font-color-link-go: $color-orange;
+$font-color-link-go-hover: $color-white;
