--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -13,3 +13,14 @@
   background-color: $color-white;
   border-radius: 22.5px;
 }
+
+.button--go {
+  height: 45px;
+  width: 76px;
+  border: 2px solid $color-orange;
+  background-color: transparent;
+  border-radius: 22.5px;
+  &:hover {
+    background-color: $color-orange;
+  }
+}
