--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -35,3 +35,15 @@
   color: $font-color-txt-article;
   line-height: 30px;
 }
+
+
+.link--go {
+  font-family: $font-family-content;
+  font-size: 20px;
+  color: $font-color-link-go;
+  line-height: 45px;
+  text-align: center;
+  &:hover {
+  color: $font-color-link-go-hover;
+}
+}
