--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -40,10 +40,12 @@
 .link--go {
   font-family: $font-family-content;
   font-size: 20px;
+  font-weight: 500;
   color: $font-color-link-go;
   line-height: 45px;
   text-align: center;
+
   &:hover {
-  color: $font-color-link-go-hover;
-}
+    color: $font-color-link-go-hover;
+  }
 }
