--- a/styles/main.css
+++ b/styles/main.css
@@ -18,7 +18,6 @@ a {
 .button--menu {
   background-color: #0271bc;
   padding: 15px 14px;
-  position: absolute;
   position: fixed;
   top: 0;
   left: 0;
@@ -118,6 +117,7 @@ a {
 .link--go {
   font-family: "Roboto", sans-serif;
   font-size: 20px;
+  font-weight: 500;
   color: #f26002;
   line-height: 45px;
   text-align: center;
@@ -125,6 +125,34 @@ a {
 
 .link--go:hover {
   color: #ffffff;
+}
+
+.article {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.txt--xs {
+  width: 9rem;
+  margin: 3rem 21.5rem 0 1.5rem;
+}
+
+.title--article {
+  margin: 0 1.5rem 1.5rem 1.5rem;
+}
+
+.txt--article {
+  margin: 0 1.5rem 3rem 1.5rem;
+}
+
+.button--go {
+  margin: 0 22.9rem 4.5rem 1.5rem;
 }
 
 /*# sourceMappingURL=main.css.map */
