--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -23,4 +23,13 @@
   margin: 0 22.9rem 4.5rem 1.5rem;
 }
 
-// SECTION
+.item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.txt--wrapper {
+  margin: 0 55px;
+}
