--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -51,7 +51,6 @@
 
 .title--1 {
   text-align: center;
-
 }
 
 .title--wrapper {
@@ -60,7 +59,6 @@
   line-height: 30px;
   font-weight: bold;
   text-align: center;
-
 }
 
 .txt--wrapper {
@@ -68,5 +66,18 @@
   font-size: 18px;
   line-height: 30px;
   text-align: center;
+}
 
+
+.link--mr {
+  font-family: $font-family-content;
+  font-size: 20px;
+  font-weight: 500;
+  color: $font-color-link-mr;
+  line-height: 45px;
+  text-align: center;
+
+  &:hover {
+    color: $font-color-link-mr-hover;
+  }
 }
