--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -18,3 +18,5 @@ $font-color-h2: $color-black;
 $font-color-txt-article: $color-grey;
 $font-color-link-go: $color-orange;
 $font-color-link-go-hover: $color-white;
+$font-color-link-mr: $color-white;
+$font-color-link-mr-hover: $color-orange;
