--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -81,3 +81,9 @@
     color: $font-color-link-mr-hover;
   }
 }
+
+.txt--footer {
+  font-family: $font-family-content;
+  font-size: 14px;
+  color: $font-color-footer;
+}
