--- a/styles/main.css
+++ b/styles/main.css
@@ -33,7 +33,7 @@ a {
 .button--go {
   height: 45px;
   width: 76px;
-  border: 2px solid #f26002;
+  border: 2px solid transparent;
   background-color: transparent;
   border-radius: 22.5px;
 }
@@ -52,6 +52,11 @@ a {
 .button--mr:hover {
   border: 2px solid #f26002;
   background-color: transparent;
+}
+
+.button--up {
+  -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
 }
 
 .hero {
@@ -169,6 +174,29 @@ a {
 
 .link--mr:hover {
   color: #f26002;
+}
+
+.txt--footer {
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  color: #ffffff;
+}
+
+.footer {
+  background-color: #304268;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .wrapper {
