--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -4,17 +4,17 @@ $color-pastel-blue: #eff9ff;
 $color-light-blue: #8ccbea;
 $color-blue: #0271bc;
 $color-dark-blue: #304268;
-$color-black: #000;
+$color-black: black;
 $color-grey: #4a4a4a;
 $color-dark-grey-blue: #304268;
 $color-transparent: transparent;
 
 $background-button-menu: $color-blue;
 $background-button-round: $color-white;
-$background-link-go: $color-transparent;
-$background-link-go-hover: $color-orange;
-$background-link-mr: $color-orange;
-$background-link-mr-hover: $color-transparent;
+$background-button-go: $color-transparent;
+$background-button-go-hover: $color-orange;
+$background-button-mr: $color-orange;
+$background-button-mr-hover: $color-transparent;
 
 $background-section: $color-pastel-blue;
 $background-footer: $color-dark-grey-blue;
@@ -29,6 +29,6 @@ $font-color-txt-article: $color-grey;
 $font-color-footer: $color-white;
 
 $font-color-link-go: $color-orange;
-$font-color-link-go-hover: $color-white;
+$font-color-link-go-hover: $color-black;
 $font-color-link-mr: $color-white;
 $font-color-link-mr-hover: $color-orange;
