--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -4,4 +4,21 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
+}
+
+.button--up {
+  position: absolute;
+  top: 0;
+  transform: translateY(-50%);
+}
+
+.footer--copy {
+  height: 30px;
+  margin: 3.8rem 12.2rem 0 12.2rem;
+}
+
+.footer--heart {
+  height: 30px;
+  margin: 0 1.5rem 3rem 1.5rem;
 }
