--- a/styles/main.css
+++ b/styles/main.css
@@ -28,14 +28,25 @@ a {
   width: 45px;
   background-color: #ffffff;
   border-radius: 22.5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .button--go {
   height: 45px;
   width: 76px;
-  border: 2px solid transparent;
+  border: 2px solid #f26002;
   background-color: transparent;
   border-radius: 22.5px;
+  -webkit-transition: background-color ease 3s;
+  transition: background-color ease 3s;
 }
 
 .button--go:hover {
@@ -47,6 +58,8 @@ a {
   width: 184px;
   background-color: #f26002;
   border-radius: 22.5px;
+  -webkit-transition: background-color ease 3s;
+  transition: background-color ease 3s;
 }
 
 .button--mr:hover {
@@ -120,7 +133,7 @@ a {
 .title--h2 {
   font-family: "Roboto Slab", serif;
   font-size: 24px;
-  color: #000;
+  color: black;
   line-height: 30px;
 }
 
@@ -138,10 +151,12 @@ a {
   color: #f26002;
   line-height: 45px;
   text-align: center;
+  -webkit-transition: color ease 3s;
+  transition: color ease 3s;
 }
 
 .link--go:hover {
-  color: #ffffff;
+  color: black;
 }
 
 .title--1 {
@@ -170,6 +185,8 @@ a {
   color: #ffffff;
   line-height: 45px;
   text-align: center;
+  -webkit-transition: color ease 3s;
+  transition: color ease 3s;
 }
 
 .link--mr:hover {
@@ -180,6 +197,10 @@ a {
   font-family: "Roboto", sans-serif;
   font-size: 14px;
   color: #ffffff;
+}
+
+.heart {
+  color: #f26002;
 }
 
 .footer {
@@ -197,6 +218,24 @@ a {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  position: relative;
+}
+
+.button--up {
+  position: absolute;
+  top: 0;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.footer--copy {
+  height: 30px;
+  margin: 3.8rem 12.2rem 0 12.2rem;
+}
+
+.footer--heart {
+  height: 30px;
+  margin: 0 1.5rem 3rem 1.5rem;
 }
 
 .wrapper {
