--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -10,8 +10,8 @@
 }
 
 .title--h1 {
-  width: 290px;
-  height: 110px;
+  width: 29rem;
+  height: 11rem;
   margin: 28.4rem 1.5rem 1rem 1.5rem;
 }
 
