--- a/styles/main.css
+++ b/styles/main.css
@@ -91,8 +91,8 @@ a {
 }
 
 .title--h1 {
-  width: 290px;
-  height: 110px;
+  width: 29rem;
+  height: 11rem;
   margin: 28.4rem 1.5rem 1rem 1.5rem;
 }
 
@@ -291,6 +291,13 @@ a {
 
 .txt--wrapper {
   margin: 0 55px;
+}
+
+@media all and (min-width: 768px) {
+  .title--h1 {
+    font-size: 80px;
+    line-height: 106px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
