--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
   min-height: 100vh;
   width: 100%;
-  background: url(../../images/cover.jpg) center no-repeat;
+  background: url(images/cover.jpg) center no-repeat;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -10,14 +10,12 @@
 }
 
 .title--h1 {
-  width: 29rem;
-  height: 11rem;
   margin: 28.4rem 1.5rem 1rem 1.5rem;
 }
 
 .txt--giro {
-  width: 290px;
-  height: 21px;
+  // width: 290px;
+  // height: 21px;
   margin: 0 1.5rem 4.5rem 1.5rem;
 }
 
