--- a/styles/main.css
+++ b/styles/main.css
@@ -75,7 +75,7 @@ a {
 .hero {
   min-height: 100vh;
   width: 100%;
-  background: url(../../images/cover.jpg) center no-repeat;
+  background: url(images/cover.jpg) center no-repeat;
   background-size: cover;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -91,14 +91,10 @@ a {
 }
 
 .title--h1 {
-  width: 29rem;
-  height: 11rem;
   margin: 28.4rem 1.5rem 1rem 1.5rem;
 }
 
 .txt--giro {
-  width: 290px;
-  height: 21px;
   margin: 0 1.5rem 4.5rem 1.5rem;
 }
 
@@ -297,6 +293,10 @@ a {
   .title--h1 {
     font-size: 80px;
     line-height: 106px;
+  }
+
+  .txt--giro {
+    font-size: 24px;
   }
 }
 
