--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
   min-height: 100vh;
   width: 100%;
-  background: url(images/cover.jpg) center no-repeat;
+  background: url(../../images/cover.jpg) center no-repeat;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -10,7 +10,14 @@
 }
 
 .title--h1 {
+  width: 290px;
+  height: 110px;
   margin: 28.4rem 1.5rem 1rem 1.5rem;
+
+  @media all and (min-width: 768px) {
+    width: 690px;
+    height: 212px;
+}
 }
 
 .txt--giro {
