--- a/styles/main.css
+++ b/styles/main.css
@@ -75,7 +75,7 @@ a {
 .hero {
   min-height: 100vh;
   width: 100%;
-  background: url(images/cover.jpg) center no-repeat;
+  background: url(../../images/cover.jpg) center no-repeat;
   background-size: cover;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -91,6 +91,8 @@ a {
 }
 
 .title--h1 {
+  width: 290px;
+  height: 110px;
   margin: 28.4rem 1.5rem 1rem 1.5rem;
 }
 
@@ -290,6 +292,11 @@ a {
 }
 
 @media all and (min-width: 768px) {
+  .title--h1 {
+    width: 690px;
+    height: 212px;
+  }
+
   .title--h1 {
     font-size: 80px;
     line-height: 106px;
