--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
   min-height: 100vh;
   width: 100%;
-  background: url(../../images/cover.jpg) center no-repeat;
+  background: url('../images/cover.jpg') center no-repeat;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -17,7 +17,12 @@
   @media all and (min-width: 768px) {
     width: 690px;
     height: 212px;
-}
+  }
+
+  @media all and (min-width: 1200px) {
+    width: 730px;
+    height: 264px;
+  }
 }
 
 .txt--giro {
@@ -27,5 +32,5 @@
 }
 
 .button--down {
-  margin: 0 13.8rem 5.3rem 13.8rem;
+  margin: 0 138px 53px 138px;
 }
