--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -7,20 +7,22 @@
 }
 
 .txt--xs {
-  width: 9rem;
-  margin: 3rem 21.5rem 0 1.5rem;
+  width: 9px;
+  margin: 30px 215px 0 15px;
 }
 
 .title--article {
-  margin: 0 1.5rem 1.5rem 1.5rem;
+  width: 290px;
+  margin: 0 15px 15px 15px;
 }
 
 .txt--article {
-  margin: 0 1.5rem 3rem 1.5rem;
+  width: 290px;
+  margin: 0 15px 30px 15px;
 }
 
 .button--go {
-  margin: 0 22.9rem 4.5rem 1.5rem;
+  margin: 0 229px 45px 15px;
 }
 
 .item {
