--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -38,6 +38,10 @@
   font-size: 14px;
   color: $font-color-txt-xs;
   line-height: 30px;
+
+  @media all and (min-width: 1200px) {
+    font-size: 16px;
+  }
 }
 
 .title--h2 {
@@ -45,6 +49,15 @@
   font-size: 24px;
   color: $font-color-h2;
   line-height: 30px;
+
+  @media all and (min-width: 768px) {
+    font-size: 26px;
+    line-height: 45px;
+  }
+
+  @media all and (min-width: 1200px) {
+    font-size: 32px;
+  }
 }
 
 .txt--article {
@@ -52,6 +65,10 @@
   font-size: 18px;
   color: $font-color-txt-article;
   line-height: 30px;
+
+  @media all and (min-width: 768px) {
+    font-size: 20px;
+  }
 }
 
 .link--go {
