--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -1,12 +1,15 @@
 .wrapper {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 60px 138px 138px 138px 90px;
-  background-color: $background-section;
-
   @media all and (min-width: 768px) {
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-template-areas: "top top top" "mid1 mid2 mid3" "bottom bottom bottom";
-}
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 75px 157px 75px;
+    grid-template-areas: "top top top" "mid1 mid2 mid3" "bottom bottom bottom";
+  }
+
+  @media all and (min-width: 1200px) {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 105px 157px 105px;
+    grid-template-areas: "top top top" "mid1 mid2 mid3" "bottom bottom bottom";
+  }
 }
