--- a/styles/main.css
+++ b/styles/main.css
@@ -45,8 +45,8 @@ a {
   border: 2px solid #f26002;
   background-color: transparent;
   border-radius: 22.5px;
-  -webkit-transition: background-color ease 3s;
-  transition: background-color ease 3s;
+  -webkit-transition: background-color ease 2s;
+  transition: background-color ease 2s;
 }
 
 .button--go:hover {
@@ -58,8 +58,8 @@ a {
   width: 184px;
   background-color: #f26002;
   border-radius: 22.5px;
-  -webkit-transition: background-color ease 3s;
-  transition: background-color ease 3s;
+  -webkit-transition: background-color ease 4s;
+  transition: background-color ease 4s;
 }
 
 .button--mr:hover {
@@ -70,6 +70,15 @@ a {
 .button--up {
   -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+}
+
+.button--up:hover {
+  -webkit-animation-name: size;
+  animation-name: size;
+  -webkit-animation-duration: 5s;
+  animation-duration: 5s;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
 }
 
 .hero {
@@ -107,7 +116,7 @@ a {
 .title--h1 {
   font-family: "Roboto Slab", serif;
   font-size: 42px;
-  font-weight: bold;
+  font-weight: 700;
   color: #ffffff;
   line-height: 55px;
   text-align: center;
@@ -149,8 +158,8 @@ a {
   color: #f26002;
   line-height: 45px;
   text-align: center;
-  -webkit-transition: color ease 3s;
-  transition: color ease 3s;
+  -webkit-transition: color ease 2s;
+  transition: color ease 2s;
 }
 
 .link--go:hover {
@@ -165,7 +174,7 @@ a {
   font-family: "Roboto Slab", serif;
   font-size: 18px;
   line-height: 30px;
-  font-weight: bold;
+  font-weight: 700;
   text-align: center;
 }
 
@@ -183,8 +192,8 @@ a {
   color: #ffffff;
   line-height: 45px;
   text-align: center;
-  -webkit-transition: color ease 3s;
-  transition: color ease 3s;
+  -webkit-transition: color ease 2s;
+  transition: color ease 2s;
 }
 
 .link--mr:hover {
@@ -236,13 +245,6 @@ a {
   margin: 0 1.5rem 3rem 1.5rem;
 }
 
-.wrapper {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 60px 138px 138px 138px 90px;
-  background-color: #eff9ff;
-}
-
 .article {
   width: 100%;
   display: -webkit-box;
@@ -255,17 +257,14 @@ a {
 }
 
 .txt--xs {
-  width: 90px;
   margin: 30px 215px 0 15px;
 }
 
 .title--article {
-  width: 290px;
   margin: 0 15px 15px 15px;
 }
 
 .txt--article {
-  width: 290px;
   margin: 0 15px 30px 15px;
 }
 
@@ -274,10 +273,9 @@ a {
 }
 
 .grid-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  margin: 0 auto;
   background-color: #eff9ff;
+  padding-top: 30px;
   padding-bottom: 60px;
 }
 
@@ -297,11 +295,23 @@ a {
   align-items: center;
 }
 
+.item-1 {
+  margin-bottom: 22.5px;
+}
+
 .item-2 {
   padding: 22.5px 55px;
 }
 
+.item-3 {
+  margin-top: 45px;
+}
+
 @media all and (min-width: 768px) {
+  .button--mr {
+    width: 210px;
+  }
+
   .title--h1 {
     width: 690px;
     height: 212px;
@@ -325,24 +335,31 @@ a {
     font-size: 20px;
   }
 
+  .title--wrapper {
+    font-size: 24px;
+    line-height: 30px;
+  }
+
+  .txt--wrapper {
+    font-size: 20px;
+  }
+
   .wrapper {
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 75px 157px 75px;
     grid-template-areas: "top top top" "mid1 mid2 mid3" "bottom bottom bottom";
   }
 
   .txt--xs {
-    width: 216px;
     margin: 30px 513px 0 39px;
   }
 
   .title--article {
-    width: 690px;
     margin: 0 39px 30px 39px;
   }
 
   .txt--article {
-    width: 690px;
     margin: 0px 39px 30px 39px;
   }
 
@@ -350,8 +367,13 @@ a {
     margin: 0 638px 60px 39px;
   }
 
+  .grid-box {
+    padding-top: 0;
+  }
+
   .item-1 {
     grid-area: top;
+    margin-bottom: 0;
   }
 
   .item-mid1 {
@@ -368,12 +390,17 @@ a {
 
   .item-3 {
     grid-area: bottom;
+    margin-top: 0;
   }
 }
 
 @media all and (min-width: 1200px) {
   .button--go {
     width: 160px;
+  }
+
+  .button--mr {
+    width: 255px;
   }
 
   .title--h1 {
@@ -398,23 +425,59 @@ a {
     font-size: 32px;
   }
 
+  .wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 105px 157px 105px;
+    grid-template-areas: "top top top" "mid1 mid2 mid3" "bottom bottom bottom";
+  }
+
   .txt--xs {
-    width: 360px;
     margin: 60px 645px 0 275px;
   }
 
   .title--article {
-    width: 730px;
     margin: 0 275px 30px 275px;
   }
 
   .txt--article {
-    width: 730px;
     margin: 0 275px 30px 275px;
   }
 
   .button--go {
     margin: 0 845px 60px 275px;
+  }
+}
+
+@-webkit-keyframes size {
+  from {
+    -webkit-transform: translateY(0%);
+    transform: translateY(0%);
+    -webkit-transform: scale(2);
+    transform: scale(2);
+  }
+
+  to {
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@keyframes size {
+  from {
+    -webkit-transform: translateY(0%);
+    transform: translateY(0%);
+    -webkit-transform: scale(2);
+    transform: scale(2);
+  }
+
+  to {
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    -webkit-transform: scale(1);
+    transform: scale(1);
   }
 }
 
