--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -31,4 +31,4 @@ $font-color-footer: $color-white;
 $font-color-link-go: $color-orange;
 $font-color-link-go-hover: $color-black;
 $font-color-link-mr: $color-white;
-$font-color-link-mr-hover: $color-orange;
+$font-color-link-mr-hover: $color-black;
