--- a/styles/main.css
+++ b/styles/main.css
@@ -277,9 +277,9 @@ a {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -332,12 +332,13 @@ a {
 
   .txt--wrapper {
     font-size: 20px;
+    padding-top: 14px;
   }
 
   .wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 75px 157px 75px;
+    grid-template-rows: 90px 172px 45px;
     grid-template-areas: "top top top" "mid1 mid2 mid3" "bottom bottom bottom";
   }
 
@@ -358,12 +359,16 @@ a {
   }
 
   .grid-box {
-    padding-top: 0;
+    padding-top: 30px;
   }
 
   .item-1 {
     grid-area: top;
     margin-bottom: 0;
+  }
+
+  .item-2 {
+    padding: 0 40px;
   }
 
   .item-mid1 {
@@ -418,7 +423,7 @@ a {
   .wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 105px 157px 105px;
+    grid-template-rows: 105px 157px 45px;
     grid-template-areas: "top top top" "mid1 mid2 mid3" "bottom bottom bottom";
   }
 
@@ -436,6 +441,10 @@ a {
 
   .button--go {
     margin: 0 845px 60px 275px;
+  }
+
+  .grid-box {
+    padding-top: 60px;
   }
 }
 
