Add animation blur

--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -71,9 +71,11 @@
     @keyframes size {
       from {
         transform: scale(2);
+        filter: blur(3px);
       }
       to {
         transform: scale(1);
+        filter: blur(0);
       }
     }
   }
