--- a/styles/main.css
+++ b/styles/main.css
@@ -428,7 +428,7 @@ a {
   .wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 105px 157px 45px;
+    grid-template-rows: 105px 172px 45px;
     grid-template-areas: "top top top" "mid1 mid2 mid3" "bottom bottom bottom";
   }
 
@@ -457,11 +457,15 @@ a {
   from {
     -webkit-transform: scale(2);
     transform: scale(2);
+    -webkit-filter: blur(3px);
+    filter: blur(3px);
   }
 
   to {
     -webkit-transform: scale(1);
     transform: scale(1);
+    -webkit-filter: blur(0);
+    filter: blur(0);
   }
 }
 
@@ -469,11 +473,15 @@ a {
   from {
     -webkit-transform: scale(2);
     transform: scale(2);
+    -webkit-filter: blur(3px);
+    filter: blur(3px);
   }
 
   to {
     -webkit-transform: scale(1);
     transform: scale(1);
+    -webkit-filter: blur(0);
+    filter: blur(0);
   }
 }
 
