--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,9 +2,9 @@
 @import 'core/base.scss';
 
 @import 'components/buttons.scss';
-@import 'components/hero.scss';
 @import 'components/typography.scss';
 
+@import 'layout/header.scss';
 @import 'layout/footer.scss';
 @import 'layout/grid.scss';
 
