--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -18,6 +18,9 @@ $background-button-mr-hover: $color-transparent;
 
 $background-section: $color-pastel-blue;
 $background-footer: $color-dark-grey-blue;
+$background-newsection: $color-orange;
+$background-newsection-tablet: $color-dark-grey-blue;
+
 
 $font-family-title: 'Roboto Slab', serif;
 $font-family-content: 'Roboto', sans-serif;
@@ -27,6 +30,7 @@ $font-color-txt-xs: $color-light-blue;
 $font-color-h2: $color-black;
 $font-color-txt-article: $color-grey;
 $font-color-footer: $color-white;
+$font-color-newsection: $color-white;
 
 $font-color-link-go: $color-orange;
 $font-color-link-go-hover: $color-black;
